= Changelog

* API
  ** Add user `id` to `/login` response.
* Frontend
  ** Add user `id` to localStorage.

== `0.0.0.0`

* Initial release.