@@ -2,6 +2,7 @@
 
 * API
   ** Add user `id` to `/login` response.
+  ** Improve `/profile` route.
 * Frontend
   ** Add user `id` to localStorage.
 
